# shellq

./: CMakeLists.txt  LICENSE
setup/: shellq.reg
src/: CMakeLists.txt  ClassFactory.h  ComHelp.h  ContextMenu.cpp  ContextMenu.h  FileOperationQueue.cpp  FileOperationQueue.h  OperationQueue.cpp  OperationQueue.h  Queue.cpp  Queue.h  TrayIcon.cpp  TrayIcon.h  dlldata.c  dllmain.cpp  exports.def  precomp.h  resource.h  shellq.h  shellq.idl  shellq.rc  shellq_i.c  shellq_p.c  thinger.rc
